# Predictive-Maintenance-For-Robotic-Welding-Arm

./: .gitignore  README.md  main.py  pyproject.toml  riyadh account.txt  riyadh test
Datasets/CV Seam Detection Dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
Datasets/CV Seam Detection Dataset/test/labels/: IMG_20241119_152432_1_jpg.rf.7542ebfbd5cc31c6cf9e8f3ab24a36c7.txt
Datasets/CV Seam Detection Dataset/train/labels/: 5258012540334630412_jpg.rf.9bc7670f49ce43c4e8f74d763f11f01c.txt  5258012540334630413_jpg.rf.4d9a833126d05443321a28f988adaad5.txt  5258012540334630414_jpg.rf.294087072e9468d2e261e11552b7ccbe.txt  5258012540334630415_jpg.rf.27426612f4b69e0dfa6f1f90a5fbda51.txt  5258012540334630416_jpg.rf.c3151116f7560b703e180fe2514edd5b.txt  5258012540334630417_jpg.rf.d08539f3469890d3fdf6a0ea514e6348.txt  5258012540334630418_jpg.rf.a444b40ef080fd6f1875d514f9b150c7.txt  5258012540334630419_jpg.rf.e3aa5638c8b579a6bf3a4048c913b39b.txt  5258012540334630420_jpg.rf.25e21fd95ba4b04ca8dfb8be10a7662c.txt  (+113 more)
Datasets/Simulated Dataset for Edge-Based Defect Prediction in Robotic Welding/Simulated Dataset for Edge-Based Defect Prediction/: README.txt  welding_dataset.csv  welding_dataset.xlsx  ~$welding_dataset.xlsx
docs/: results.md
models/: sensor_lstm.pth  sensor_rf.joblib  vision_cnn.pth
notebooks/: sensor_eda.ipynb  vision_eda.ipynb
src/: config.py
src/data/: load_sensors.py  load_vision.py
src/diagnostics/: fault_tree.py
src/models/: sensor_lstm.py  sensor_rf.py  vision_cnn.py
src/utils/: io.py  plotting.py
(+18 files in other folders)
